use main color for theme, fixes #2

--- a/themes/Flex/static/stylesheet/style.less
+++ b/themes/Flex/static/stylesheet/style.less
@@ -1,5 +1,5 @@
-@orange: #D9411E;
-@light-orange: #FF5A09;
+@main-color: #3979c2;
+@hover-color: #5b9bf4;
 @white:  #ffffff;
 @grey: #333333;
 @light-grey:  #eeeeee;
@@ -58,12 +58,12 @@ body {
 }
 
 a {
-  color: @orange;
+  color: @main-color;
   text-decoration: none;
 }
 
 a:hover {
-  color: @light-orange;
+  color: @hover-color;
 }
 
 hr {
@@ -259,7 +259,7 @@ main {
 
 .tag-cloud {
   a {
-    background-color: @orange;
+    background-color: @main-color;
     padding: .2em .6em .2em;
     font-size: .74em;
     line-height: 1;
@@ -271,12 +271,12 @@ main {
   }
 
   a:hover {
-    background-color: @light-orange;
+    background-color: @hover-color;
   }
 }
 
 a.btn {
-  background-color: @orange;
+  background-color: @main-color;
   padding: .4em .6em;
   font-size: .9em;
   line-height: 1;
@@ -288,7 +288,7 @@ a.btn {
 }
 
 a.btn:hover {
-  background-color: @light-orange;
+  background-color: @hover-color;
 }
 
 .center {
