Added website background color

--- a/themes/Flex/static/stylesheet/style.less
+++ b/themes/Flex/static/stylesheet/style.less
@@ -50,7 +50,9 @@ h6 {
 body {
   margin: 0;
   padding: 0;
-  background-color: @white;
+  background-image: linear-gradient(to bottom right, #fdf, #dff);;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: @dark-grey;
   font-family: @sans;
   font-size: 1.02em;
