--- a/themes/Flex/static/stylesheet/style.less
+++ b/themes/Flex/static/stylesheet/style.less
@@ -50,7 +50,7 @@ h6 {
 body {
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(to bottom right, #fdf, #dff);;
+  background-image: linear-gradient(to bottom right, #fef, #eff);;
   background-repeat: no-repeat;
   background-attachment: fixed;
   color: @dark-grey;
