--- a/themes/Flex/templates/base.html
+++ b/themes/Flex/templates/base.html
@@ -64,7 +64,8 @@
     {% include "partial/gtm.html" %}
   {% endif %}
   <aside>
-    <div id="aside">
+    <div id="aside" style="width: 100%; height: 99%; position: absolute; padding: 0; margin: 0; z-index: -10;"></div>
+    <div>
       <a href="{{ SITEURL }}">
         {% if SITELOGO %}
         <img src="{{ SITELOGO }}" alt="{{ SITETITLE }}" title="{{ SITETITLE }}">
