Disabled schwurbel for mobile

--- a/themes/Flex/static/stylesheet/style.less
+++ b/themes/Flex/static/stylesheet/style.less
@@ -382,11 +382,19 @@ ul.social {
   }
 }
 
+#aside {
+	display: none;
+}
+
 //
 // Desktop
 //
 
 @media screen and (min-width: 768px) {
+  #aside {
+  	display: block;
+  }
+  
   aside {
     width: 25%;
     height: 100%;
