--- a/themes/Flex/templates/base.html
+++ b/themes/Flex/templates/base.html
@@ -10,7 +10,7 @@
 
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
-  <meta name="google-site-verification" content="xpr9W4x1kp8nHfqYyNFjrCe-0aPWb3adUDuIlzPPkrQ" />
+  <meta name="google-site-verification" content="xpr9W4x1kp8nHfqYyNFjrCe-0aPWb3adUDuIlzPPkrQ" /> 
   <script src="/static/particles.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js"></script>
@@ -21,7 +21,7 @@
         console.log('callback - particles.js config loaded');
       });
       $(".site-subtitle").typed({
-          strings: ["Cloud Deployments", "Agile Management", "Serverless Computing", "Enterprise Unikernels"],
+          strings: ["Cloud Deployments", "Agile Management", "Cyber Außenpolitik", "Serverless Computing", "Cyber Offense", "Enterprise Unikernels", "Enterprise Environments", "Mobile First", "Internet of Everything", "Native Advertising", "Growth Hacking", "Omnichannel Marketing", "Cyber Defense", "Smart Data", "Digital Transformation", "Mobilegeddon", "Artifical Everything", "Ambient UX", "Quantum Advertisement", "Distruptive Computing", "4D Printing", "Analytics 4.0", "Ahead of time deployment", "Blockchain Banking"],
           typeSpeed: 30,
           backDelay: 1000,
           loop: true,
