Removed Cyber Außenpolitik

--- a/themes/Flex/templates/base.html
+++ b/themes/Flex/templates/base.html
@@ -21,7 +21,7 @@
         console.log('callback - particles.js config loaded');
       });
       $(".site-subtitle").typed({
-          strings: ["Cloud Deployments", "Agile Management", "Cyber Außenpolitik", "Serverless Computing", "Cyber Offense", "Enterprise Unikernels", "Enterprise Environments", "Mobile First", "Internet of Everything", "Native Advertising", "Growth Hacking", "Omnichannel Marketing", "Cyber Defense", "Smart Data", "Digital Transformation", "Mobilegeddon", "Artifical Everything", "Ambient UX", "Quantum Advertisement", "Distruptive Computing", "4D Printing", "Analytics 4.0", "Ahead of time deployment", "Blockchain Banking"],
+          strings: ["Cloud Deployments", "Agile Management", "Serverless Computing", "Cyber Offense", "Enterprise Unikernels", "Enterprise Environments", "Mobile First", "Internet of Everything", "Native Advertising", "Growth Hacking", "Omnichannel Marketing", "Cyber Defense", "Smart Data", "Digital Transformation", "Mobilegeddon", "Artifical Everything", "Ambient UX", "Quantum Advertisement", "Disruptive Computing", "4D Printing", "Analytics 4.0", "Ahead of time deployment", "Blockchain Banking"],
           typeSpeed: 30,
           backDelay: 1000,
           loop: true,
