--- a/themes/Flex/templates/base.html
+++ b/themes/Flex/templates/base.html
@@ -86,7 +86,7 @@
       <nav>
         <ul class="list">
           {% for name, link in LINKS %}
-          <li><a href="{{ link }}" target="_blank">{{ name }}</a></li>
+          <li><a href="{{ link }}">{{ name }}</a></li>
           {% endfor %}
           {% for page in pages|sort(attribute='title') %}
           <li><a href="{{ SITEURL }}/{{ page.url }}#{{ page.slug }}">{{ page.title }}</a></li>
